infra/vm.tf
resource "azurerm_linux_virtual_machine" "vm" {
  name                            = "vm-automation"
  resource_group_name             = azurerm_resource_group.rg.name
  location                        = azurerm_resource_group.rg.location
  size                            = "Standard_D2s_v3"
  admin_username                  = "azureuser"
  admin_password                  = var.admin_password
  disable_password_authentication = false

  network_interface_ids = [
    azurerm_network_interface.nic.id
  ]

  # Config the VM to upgrade the python version
  custom_data = base64encode(<<-EOF
    #cloud-config
    package_update: true
    packages:
      - python3.10
      - python3.10-distutils
    runcmd:
      - update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 10
      - python3 --version
  EOF
  )

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-focal"
    sku       = "20_04-lts"
    version   = "latest"
  }
}
